# Mini-diary-rs

./: README.md  package-lock.json  package.json
src/: App.tsx  constants.ts  main.tsx  types.ts
src-tauri/: .encrypted-passwd.txt  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/styles/: styles.scss
src/assets/styles/base/: _variables.scss
src/assets/styles/components/: _calendar.scss  _diary.scss  _editor.scss
src/components/elements/editor/: Editor.tsx  styles.css
src/components/elements/editor/editor-toolbar/: EditorToolbar.tsx  FormattingButtons.tsx  WordCount.tsx
src/components/elements/general/: Banner.tsx
src/components/elements/sidebar/: Calendar.tsx  CalendarNav.tsx  SearchBar.tsx  SearchResults.tsx  Sidebar.tsx  styles.css
src/components/pages/diary/: Diary.tsx
src/components/pages/start-page/: PasswordCreation.tsx  PasswordPrompt.tsx  StartPage.tsx
src/utils/: dateFormat.ts  icons.ts
